--- a/client/src/components/game/Chat.css
+++ b/client/src/components/game/Chat.css
@@ -1,6 +1,6 @@
 .gameContainer {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -27,7 +27,7 @@
 }
 .str-chat__list li {
   list-style-type: none;
-  background-color: lightgrey;
+  background-color: #A784D9;
   margin-top: 10px;
   border-radius: 6px;
   display: flex;
@@ -60,9 +60,9 @@
 }
 
 .str-chat__input-flat {
-  width: 310px;
+  width: 300px;
   height: 200px;
-  background-color: lightgrey;
+  background-color: #5714AC;
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
 }
@@ -84,6 +84,7 @@
   box-shadow: 0 0 0 1px black;
   padding: 10px;
   font-size: 15px;
+  color: black;
 }
 
 .str-chat__message-simple__actions {
@@ -95,7 +96,7 @@
   display: flex;
   align-items: center;
   width: fit-content;
-  background: #ffffff;
+  background: #A784D9;
   border: 1px solid #e9e9ea;
   box-sizing: border-box;
   border-radius: 50vw;
